// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`boolean > can be toggled to "yes" > args 1`] = `
{
  "a": true,
  "help": false,
}
`;

exports[`boolean > can be toggled to "yes" > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mno[22m[39m [2m|[22m yes",
  "[2K",
  "[1G",
  "     ❯ ",
  "no [2m|[22m [32m[1myes[22m[39m",
  "
",
  "[?25h",
  "[?25h",
  "
",
]
`;

exports[`boolean > can be toggled to "yes" > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "
",
  "",
  "",
  "
",
]
`;

exports[`boolean > can be toggled to "yes" and then back to "no" > args 1`] = `
{
  "a": false,
  "help": false,
}
`;

exports[`boolean > can be toggled to "yes" and then back to "no" > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mno[22m[39m [2m|[22m yes",
  "[2K",
  "[1G",
  "     ❯ ",
  "no [2m|[22m [32m[1myes[22m[39m",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mno[22m[39m [2m|[22m yes",
  "
",
  "[?25h",
  "[?25h",
  "
",
]
`;

exports[`boolean > can be toggled to "yes" and then back to "no" > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "
",
  "",
  "",
  "
",
]
`;

exports[`boolean > can use tab to toggle between "yes" and "no" > args 1`] = `
{
  "a": false,
  "help": false,
}
`;

exports[`boolean > can use tab to toggle between "yes" and "no" > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mno[22m[39m [2m|[22m yes",
  "[2K",
  "[1G",
  "     ❯ ",
  "no [2m|[22m [32m[1myes[22m[39m",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mno[22m[39m [2m|[22m yes",
  "
",
  "[?25h",
  "[?25h",
  "
",
]
`;

exports[`boolean > can use tab to toggle between "yes" and "no" > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "
",
  "",
  "",
  "
",
]
`;

exports[`boolean > defaults to "no" > args 1`] = `
{
  "a": false,
  "help": false,
}
`;

exports[`boolean > defaults to "no" > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mno[22m[39m [2m|[22m yes",
  "
",
  "[?25h",
  "[?25h",
  "
",
]
`;

exports[`boolean > defaults to "no" > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "no | yes",
  "
",
  "",
  "",
  "
",
]
`;

exports[`can be explicitly disabled > args 1`] = `[ErrorMissingArgument: Missing argument for flag "a".]`;

exports[`can be explicitly disabled > tty 1`] = `[]`;

exports[`can be explicitly disabled > tty strip ansi 1`] = `[]`;

exports[`can be explicitly disabled with a "when" condition present > args 1`] = `[ErrorMissingArgument: Missing argument for flag "a".]`;

exports[`can be explicitly disabled with a "when" condition present > tty 1`] = `[]`;

exports[`can be explicitly disabled with a "when" condition present > tty strip ansi 1`] = `[]`;

exports[`enumeration > can select member leftward with left key > args 1`] = `
{
  "a": "major",
  "help": false,
}
`;

exports[`enumeration > can select member leftward with left key > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "major[2m | [22m[32m[1mminor[22m[39m[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "
",
  "[?25h",
  "
",
]
`;

exports[`enumeration > can select member leftward with left key > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "
",
  "",
  "
",
]
`;

exports[`enumeration > can select member rightward with right key > args 1`] = `
{
  "a": "minor",
  "help": false,
}
`;

exports[`enumeration > can select member rightward with right key > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "major[2m | [22m[32m[1mminor[22m[39m[2m | [22mpatch",
  "
",
  "[?25h",
  "
",
]
`;

exports[`enumeration > can select member rightward with right key > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "
",
  "",
  "
",
]
`;

exports[`enumeration > defaults to first member > args 1`] = `
{
  "a": "major",
  "help": false,
}
`;

exports[`enumeration > defaults to first member > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "
",
  "[?25h",
  "
",
]
`;

exports[`enumeration > defaults to first member > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "
",
  "",
  "
",
]
`;

exports[`enumeration > loop > left key on first member loops to last member > args 1`] = `
{
  "a": "patch",
  "help": false,
}
`;

exports[`enumeration > loop > left key on first member loops to last member > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "major[2m | [22mminor[2m | [22m[32m[1mpatch[22m[39m",
  "
",
  "[?25h",
  "
",
]
`;

exports[`enumeration > loop > left key on first member loops to last member > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "
",
  "",
  "
",
]
`;

exports[`enumeration > loop > right key on last member loops to first member > args 1`] = `
{
  "a": "major",
  "help": false,
}
`;

exports[`enumeration > loop > right key on last member loops to first member > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "major[2m | [22m[32m[1mminor[22m[39m[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "major[2m | [22mminor[2m | [22m[32m[1mpatch[22m[39m",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "
",
  "[?25h",
  "
",
]
`;

exports[`enumeration > loop > right key on last member loops to first member > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "
",
  "",
  "
",
]
`;

exports[`enumeration > tab > can select member leftward with shift+tab key > args 1`] = `
{
  "a": "major",
  "help": false,
}
`;

exports[`enumeration > tab > can select member leftward with shift+tab key > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "major[2m | [22m[32m[1mminor[22m[39m[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "
",
  "[?25h",
  "
",
]
`;

exports[`enumeration > tab > can select member leftward with shift+tab key > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "
",
  "",
  "
",
]
`;

exports[`enumeration > tab > can select member rightward with tab key > args 1`] = `
{
  "a": "minor",
  "help": false,
}
`;

exports[`enumeration > tab > can select member rightward with tab key > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "[?25l",
  "[2K",
  "[1G",
  "     ❯ ",
  "[32m[1mmajor[22m[39m[2m | [22mminor[2m | [22mpatch",
  "[2K",
  "[1G",
  "     ❯ ",
  "major[2m | [22m[32m[1mminor[22m[39m[2m | [22mpatch",
  "
",
  "[?25h",
  "
",
]
`;

exports[`enumeration > tab > can select member rightward with tab key > tty strip ansi 1`] = `
[
  "1/1  a
",
  "",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "",
  "",
  "     ❯ ",
  "major | minor | patch",
  "
",
  "",
  "
",
]
`;

exports[`prompt when invalid input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt when invalid input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when invalid input > tty strip ansi 1`] = `
[
  "1/1  a
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when invalid input OR missing input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt when invalid input OR missing input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when invalid input OR missing input > tty strip ansi 1`] = `
[
  "1/1  a
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when missing input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt when missing input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when missing input > tty strip ansi 1`] = `
[
  "1/1  a
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when omitted > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt when omitted > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when omitted > tty strip ansi 1`] = `
[
  "1/1  a
",
  "     ❯ ",
  "foo",
  "
",
]
`;
